# FetchAllegro

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
allegro_api_client/: allegro_api_client.py
allegro_api_service/: allegro_api_service.py
fetch_allegro/: main.py  settings.py
fetchallegrooffers/: main.py
